--- a/styles.css
+++ b/styles.css
@@ -9,23 +9,30 @@
 }
 
 /* Style the links inside the navigation bar */
-.topnav a {
+ul .topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
   float: left;
-  color: #f2f2f2;
+}
+
+li a {
+  display: block;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+li a:hover:not(.active) {
+  background-color: #111;
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
+.active {
   background-color: #4CAF50;
-  color: white;
 }
