--- a/styles.css
+++ b/styles.css
@@ -2,37 +2,41 @@
     font-family: sans-serif;
 }
 
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
+p {
+    margin: 1rem;
+}
+
+h1 {
+    margin: 1rem;
 }
 
 /* Style the links inside the navigation bar */
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #311b13;
 }
 
 li {
-  float: left;
+    float: left;
+    color: #ffee04;
 }
 
 li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: #ffee04;
 }
 
 li a:hover:not(.active) {
-  background-color: #111;
+    background-color: #c03856;
 }
 
 .active {
-  background-color: #4CAF50;
+    background-color: #a43901;
 }
