why does life hate me

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
 }
 
 p {
-    margin: 1rem;
+    margin: 1em;
 }
 
 h1 {
-    margin: 1rem;
+    margin: 1em;
 }
 
 /* Style the links inside the navigation bar */
